Common/src/main/java/org/example/error/IncorrectCollectionException.java
package org.example.error;

public class IncorrectCollectionException extends RuntimeException{
    public IncorrectCollectionException(String message) {
        super(message);
    }
}
